turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:15: error: type mismatch;
 found   : List[Unit]
 required: Array[Unit]
    makePattern(x)
                ^